tests/missing-semicol-after-definition.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a ';' to denote the end of a variable definition.

x: i32 = 2
